fixed formatting on mobile

--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body{
     flex-direction: column;
     align-items: center;
     background: var(--background);
-    margin-left:15px;
-    margin-right:15px;
 }
 h1, h2, h3, h4, h5, h6, p, label, button, input{
     margin:0;
@@ -17,29 +15,35 @@ h1, h2, h3, h4, h5, h6, p, label, button, input{
     font-weight: 100;
     font-family: 'Roboto Mono', monospace;
 }
+p{
+    font-size:1rem;
+}
 h3{
     font-weight:100;
-    font-size:1.3rem;
+    font-size:1.1rem;
     margin-bottom:1rem;
 }
 label{
     text-wrap: nowrap;
-    font-size:1.1rem;
+    font-size:0.9rem;
 }
 select{
     font-family: 'Roboto Mono', monospace;
     text-align: center;
-    font-size:1rem;
+    font-size:0.8rem;
     font-weight: 100;
     border:none;
     background: transparent;
     color:white;
 }
 
+
 .noBorder{
     border:none;
 }
 .backgroundWhite{
+    position: absolute;
+
     background:white;
     width:100%;
     display:flex;
@@ -47,6 +51,16 @@ select{
     align-items: center;
     color:var(--background);
 }
+input{
+    text-align: center;
+    background: none;
+    border: none;
+    caret-color: var(--text);
+    font-size:1rem;
+    width:auto;
+    margin:0;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -54,7 +68,7 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 .largerText{
-    font-size: 1.4rem;
+    font-size: 1.1rem;
 }
 /* Firefox */
 input[type=number] {
@@ -72,18 +86,8 @@ input::-ms-input-placeholder { /* Edge 12 -18 */
     color: var(--text);
   }
 
-input{
-    text-align: center;
-    background: none;
-    border: none;
-    caret-color: var(--text);
-    font-size:1.2rem;
-}
 .gap{
     gap: 5px;
-}
-.width95{
-    width:95%;
 }
 .removeBorder{
     border-color: transparent;
@@ -98,17 +102,22 @@ input{
     flex-direction:row;
 }
 .flexColumn{
+    position: relative;
     width:100%;
     height:100%;
     display:flex;
     flex-direction:column;
     align-items: center;
+    align-content: center;
 }
 .columnMobileRowDesktop{
+    position:relative;
+    width:auto;
     display:flex;
     flex-direction:column;
 }
 .container{
+    position: relative;
     width:100%;
     display:flex;
     flex-direction:column;
@@ -127,22 +136,26 @@ input{
 .setHeight{
     height:50px !important;
 }
+.setLargerHeight{
+    height:80px !important;
+}
 .gapLarger{
     gap:20px;
 }
 .marginBottom{
     margin-bottom:1rem;
 }
-.borderBottom{
-    padding:10px;
+.cyberwareSlot{
+    padding:10px 5px 10px 5px;
     border:1px solid white;
 }
 .item{
     align-self: flex-start;
     position: relative;
-    padding:20px 5px 20px 5px;
+    padding:20px 0px 20px 0px;
     width:100%;
     height:auto;
+    overflow:hidden;
 }
 .gapLarger{
     gap:23px;
@@ -150,17 +163,18 @@ input{
 .sideBars{
     font-size:1.3rem;
     font-weight: 100;
-    margin:-5px -5px -6px -5px;
 }
 .individualTrackerContainer{
+    position:relative;
+    align-self: flex-start;
     overflow:hidden;
     border:1px solid var(--text);
-    width:11.2rem;
 }
 .individualStatContainer{
-    width:10rem;
+    position:relative;
     border: 1px solid var(--text);
     overflow:hidden;
+    width:100%;
 }
 .individualStatContainer:hover{
     box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
@@ -172,14 +186,13 @@ input{
     width:2rem;
 }
 .statLabel{
-    margin:5px 5px 0px 5px;
-    padding:2px;
-    width:auto;
+    z-index:1;
+    margin:0rem 1rem 0rem 1rem;
+    position:relative;
     text-align: center;
     color:var(--background);
 }
 .statListContainer{
-    margin-right:5px;
     display: grid;
     grid-template-columns: repeat(2, 50%);
     grid-column-gap: 15px;
@@ -195,7 +208,7 @@ input{
     width:50px;
 }
 .alignLeft{
-    align-self: start;
+    align-self: flex-start !important;
     text-align:start;
 }
 .textAlignLeft{
@@ -230,16 +243,21 @@ input{
 .inputSmaller{
     width:2rem !important;
 }
+.thinnerInput{
+    width:9rem !important;
+}
 .fillWidth{
     width:90% !important;
 }
-@media screen and (min-width: 1000px) {
-    .inputMedium{
-        width:16rem;
-    }
-    .individualTrackerContainer{
-        width:12rem;
-    }
+.whiteBackground{
+    position:absolute;
+    width:100%;
+    height:40%;
+    padding:3px 10px 0px 10px;
+    background: var(--text);
+}
+
+@media screen and (min-width: 800px) {
     .container{
         margin-right:5px;
         display: grid;
@@ -257,14 +275,10 @@ input{
     .holder{
         align-self: flex-start;
         width:100%;
-        height: 50px;
     }
     .item{
         width:auto;
         height: auto;
-    }
-    .heightIncrease{
-        height: 100px;
     }
     .columnMobileRowDesktop{
         flex-direction:row;
@@ -275,14 +289,8 @@ input{
         column-width: auto;
         gap:10px;
     }
-    .individualStatContainer{
-        width:4rem;
-    }
     .statLabel{
         width:auto;
         text-align: center;
-    }
-    .reallyTall{
-        height:750px;
     }
 }
